// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsView Save buffer through the real sections > about: an edit marks the form dirty and Save posts the pinned messages 1`] = `
{
  "immediate": [],
  "save": [
    {
      "type": "updateSettings",
      "updatedSettings": {
        "allowedCommands": [
          "git status",
        ],
        "allowedMaxCost": 3,
        "allowedMaxRequests": 25,
        "alwaysAllowExecute": true,
        "alwaysAllowFollowupQuestions": false,
        "alwaysAllowMcp": undefined,
        "alwaysAllowModeSwitch": undefined,
        "alwaysAllowReadOnly": true,
        "alwaysAllowReadOnlyOutsideWorkspace": undefined,
        "alwaysAllowSubtasks": undefined,
        "alwaysAllowWrite": false,
        "alwaysAllowWriteOutsideWorkspace": undefined,
        "alwaysAllowWriteProtected": undefined,
        "alwaysApprovePlan": undefined,
        "autoCondenseContext": true,
        "autoCondenseContextApiConfigId": undefined,
        "autoCondenseContextPercent": 80,
        "autoDreamEnabled": false,
        "autoDreamMinHours": 12,
        "autoDreamMinSessions": 3,
        "autoMemoryDirectory": "/mem",
        "autoMemoryEnabled": true,
        "autoMemoryShareWithClaudeCode": undefined,
        "checkpointTimeout": 20,
        "customSupportPrompts": {
          "ENHANCE": "Improve: \${userInput}",
        },
        "deniedCommands": [
          "rm -rf",
        ],
        "enableCheckpoints": true,
        "enableSubfolderRules": false,
        "enterBehavior": "send",
        "experiments": {
          "imageGeneration": false,
          "preventFocusDisruption": false,
          "runSlashCommand": false,
        },
        "followupAutoApproveTimeoutMs": 45000,
        "imageGenerationProvider": undefined,
        "includeCurrentCost": false,
        "includeCurrentTime": true,
        "includeDiagnosticMessages": true,
        "includeTaskHistoryInEnhance": false,
        "language": "en",
        "maxDiagnosticMessages": 40,
        "maxGitStatusFiles": 9,
        "maxImageFileSize": 4,
        "maxOpenTabsContext": 15,
        "maxTotalImageSize": 18,
        "maxWorkspaceFiles": 150,
        "memoryRecallEnabled": true,
        "memoryWriterApiConfigId": "",
        "openRouterImageApiKey": undefined,
        "openRouterImageGenerationSelectedModel": undefined,
        "parallelTasksMaxConcurrency": 2,
        "profileThresholds": {},
        "pruneBeforeCondense": true,
        "pruneToolResultBudget": 4096,
        "reasoningBlockCollapsed": true,
        "searxngBaseUrl": "http://searx.local",
        "showRooIgnoredFiles": false,
        "soundEnabled": false,
        "soundVolume": 0.4,
        "subagentFollowupTimeoutSec": 30,
        "terminalCommandDelay": 0,
        "terminalOutputPreviewSize": "medium",
        "terminalPowershellCounter": undefined,
        "terminalProfile": "",
        "terminalShellIntegrationDisabled": true,
        "terminalShellIntegrationTimeout": 8000,
        "terminalZdotdir": undefined,
        "terminalZshClearEolMark": undefined,
        "terminalZshOhMy": false,
        "terminalZshP10k": undefined,
        "uiDensity": "comfortable",
        "webFetchMaxBytes": 51200,
        "webSearchBackend": "searxng",
        "webSearchMaxResults": 7,
        "webToolsEnabled": false,
        "writeDelayMs": 900,
      },
    },
    {
      "apiConfiguration": {
        "apiProvider": "anthropic",
      },
      "text": "default",
      "type": "upsertApiConfiguration",
    },
    {
      "bool": true,
      "type": "debugSetting",
    },
  ],
}
`;

exports[`SettingsView Save buffer through the real sections > autoApprove: an edit marks the form dirty and Save posts the pinned messages 1`] = `
{
  "immediate": [
    {
      "type": "updateSettings",
      "updatedSettings": {
        "allowedCommands": [
          "git status",
          "npm test",
        ],
      },
    },
  ],
  "save": [
    {
      "type": "updateSettings",
      "updatedSettings": {
        "allowedCommands": [
          "git status",
          "npm test",
        ],
        "allowedMaxCost": 3,
        "allowedMaxRequests": 25,
        "alwaysAllowExecute": true,
        "alwaysAllowFollowupQuestions": false,
        "alwaysAllowMcp": undefined,
        "alwaysAllowModeSwitch": undefined,
        "alwaysAllowReadOnly": true,
        "alwaysAllowReadOnlyOutsideWorkspace": true,
        "alwaysAllowSubtasks": undefined,
        "alwaysAllowWrite": false,
        "alwaysAllowWriteOutsideWorkspace": undefined,
        "alwaysAllowWriteProtected": undefined,
        "alwaysApprovePlan": undefined,
        "autoCondenseContext": true,
        "autoCondenseContextApiConfigId": undefined,
        "autoCondenseContextPercent": 80,
        "autoDreamEnabled": false,
        "autoDreamMinHours": 12,
        "autoDreamMinSessions": 3,
        "autoMemoryDirectory": "/mem",
        "autoMemoryEnabled": true,
        "autoMemoryShareWithClaudeCode": undefined,
        "checkpointTimeout": 20,
        "customSupportPrompts": {
          "ENHANCE": "Improve: \${userInput}",
        },
        "deniedCommands": [
          "rm -rf",
        ],
        "enableCheckpoints": true,
        "enableSubfolderRules": false,
        "enterBehavior": "send",
        "experiments": {
          "imageGeneration": false,
          "preventFocusDisruption": false,
          "runSlashCommand": false,
        },
        "followupAutoApproveTimeoutMs": 45000,
        "imageGenerationProvider": undefined,
        "includeCurrentCost": false,
        "includeCurrentTime": true,
        "includeDiagnosticMessages": true,
        "includeTaskHistoryInEnhance": false,
        "language": "en",
        "maxDiagnosticMessages": 40,
        "maxGitStatusFiles": 9,
        "maxImageFileSize": 4,
        "maxOpenTabsContext": 15,
        "maxTotalImageSize": 18,
        "maxWorkspaceFiles": 150,
        "memoryRecallEnabled": true,
        "memoryWriterApiConfigId": "",
        "openRouterImageApiKey": undefined,
        "openRouterImageGenerationSelectedModel": undefined,
        "parallelTasksMaxConcurrency": 2,
        "profileThresholds": {},
        "pruneBeforeCondense": true,
        "pruneToolResultBudget": 4096,
        "reasoningBlockCollapsed": true,
        "searxngBaseUrl": "http://searx.local",
        "showRooIgnoredFiles": false,
        "soundEnabled": false,
        "soundVolume": 0.4,
        "subagentFollowupTimeoutSec": 30,
        "terminalCommandDelay": 0,
        "terminalOutputPreviewSize": "medium",
        "terminalPowershellCounter": undefined,
        "terminalProfile": "",
        "terminalShellIntegrationDisabled": true,
        "terminalShellIntegrationTimeout": 8000,
        "terminalZdotdir": undefined,
        "terminalZshClearEolMark": undefined,
        "terminalZshOhMy": false,
        "terminalZshP10k": undefined,
        "uiDensity": "comfortable",
        "webFetchMaxBytes": 51200,
        "webSearchBackend": "searxng",
        "webSearchMaxResults": 7,
        "webToolsEnabled": false,
        "writeDelayMs": 900,
      },
    },
    {
      "apiConfiguration": {
        "apiProvider": "anthropic",
      },
      "text": "default",
      "type": "upsertApiConfiguration",
    },
    {
      "bool": false,
      "type": "debugSetting",
    },
  ],
}
`;

exports[`SettingsView Save buffer through the real sections > checkpoints: an edit marks the form dirty and Save posts the pinned messages 1`] = `
{
  "immediate": [],
  "save": [
    {
      "type": "updateSettings",
      "updatedSettings": {
        "allowedCommands": [
          "git status",
        ],
        "allowedMaxCost": 3,
        "allowedMaxRequests": 25,
        "alwaysAllowExecute": true,
        "alwaysAllowFollowupQuestions": false,
        "alwaysAllowMcp": undefined,
        "alwaysAllowModeSwitch": undefined,
        "alwaysAllowReadOnly": true,
        "alwaysAllowReadOnlyOutsideWorkspace": undefined,
        "alwaysAllowSubtasks": undefined,
        "alwaysAllowWrite": false,
        "alwaysAllowWriteOutsideWorkspace": undefined,
        "alwaysAllowWriteProtected": undefined,
        "alwaysApprovePlan": undefined,
        "autoCondenseContext": true,
        "autoCondenseContextApiConfigId": undefined,
        "autoCondenseContextPercent": 80,
        "autoDreamEnabled": false,
        "autoDreamMinHours": 12,
        "autoDreamMinSessions": 3,
        "autoMemoryDirectory": "/mem",
        "autoMemoryEnabled": true,
        "autoMemoryShareWithClaudeCode": undefined,
        "checkpointTimeout": 42,
        "customSupportPrompts": {
          "ENHANCE": "Improve: \${userInput}",
        },
        "deniedCommands": [
          "rm -rf",
        ],
        "enableCheckpoints": true,
        "enableSubfolderRules": false,
        "enterBehavior": "send",
        "experiments": {
          "imageGeneration": false,
          "preventFocusDisruption": false,
          "runSlashCommand": false,
        },
        "followupAutoApproveTimeoutMs": 45000,
        "imageGenerationProvider": undefined,
        "includeCurrentCost": false,
        "includeCurrentTime": true,
        "includeDiagnosticMessages": true,
        "includeTaskHistoryInEnhance": false,
        "language": "en",
        "maxDiagnosticMessages": 40,
        "maxGitStatusFiles": 9,
        "maxImageFileSize": 4,
        "maxOpenTabsContext": 15,
        "maxTotalImageSize": 18,
        "maxWorkspaceFiles": 150,
        "memoryRecallEnabled": true,
        "memoryWriterApiConfigId": "",
        "openRouterImageApiKey": undefined,
        "openRouterImageGenerationSelectedModel": undefined,
        "parallelTasksMaxConcurrency": 2,
        "profileThresholds": {},
        "pruneBeforeCondense": true,
        "pruneToolResultBudget": 4096,
        "reasoningBlockCollapsed": true,
        "searxngBaseUrl": "http://searx.local",
        "showRooIgnoredFiles": false,
        "soundEnabled": false,
        "soundVolume": 0.4,
        "subagentFollowupTimeoutSec": 30,
        "terminalCommandDelay": 0,
        "terminalOutputPreviewSize": "medium",
        "terminalPowershellCounter": undefined,
        "terminalProfile": "",
        "terminalShellIntegrationDisabled": true,
        "terminalShellIntegrationTimeout": 8000,
        "terminalZdotdir": undefined,
        "terminalZshClearEolMark": undefined,
        "terminalZshOhMy": false,
        "terminalZshP10k": undefined,
        "uiDensity": "comfortable",
        "webFetchMaxBytes": 51200,
        "webSearchBackend": "searxng",
        "webSearchMaxResults": 7,
        "webToolsEnabled": false,
        "writeDelayMs": 900,
      },
    },
    {
      "apiConfiguration": {
        "apiProvider": "anthropic",
      },
      "text": "default",
      "type": "upsertApiConfiguration",
    },
    {
      "bool": false,
      "type": "debugSetting",
    },
  ],
}
`;

exports[`SettingsView Save buffer through the real sections > contextManagement: an edit marks the form dirty and Save posts the pinned messages 1`] = `
{
  "immediate": [],
  "save": [
    {
      "type": "updateSettings",
      "updatedSettings": {
        "allowedCommands": [
          "git status",
        ],
        "allowedMaxCost": 3,
        "allowedMaxRequests": 25,
        "alwaysAllowExecute": true,
        "alwaysAllowFollowupQuestions": false,
        "alwaysAllowMcp": undefined,
        "alwaysAllowModeSwitch": undefined,
        "alwaysAllowReadOnly": true,
        "alwaysAllowReadOnlyOutsideWorkspace": undefined,
        "alwaysAllowSubtasks": undefined,
        "alwaysAllowWrite": false,
        "alwaysAllowWriteOutsideWorkspace": undefined,
        "alwaysAllowWriteProtected": undefined,
        "alwaysApprovePlan": undefined,
        "autoCondenseContext": true,
        "autoCondenseContextApiConfigId": undefined,
        "autoCondenseContextPercent": 80,
        "autoDreamEnabled": false,
        "autoDreamMinHours": 12,
        "autoDreamMinSessions": 3,
        "autoMemoryDirectory": "/mem",
        "autoMemoryEnabled": true,
        "autoMemoryShareWithClaudeCode": undefined,
        "checkpointTimeout": 20,
        "customSupportPrompts": {
          "ENHANCE": "Improve: \${userInput}",
        },
        "deniedCommands": [
          "rm -rf",
        ],
        "enableCheckpoints": true,
        "enableSubfolderRules": false,
        "enterBehavior": "send",
        "experiments": {
          "imageGeneration": false,
          "preventFocusDisruption": false,
          "runSlashCommand": false,
        },
        "followupAutoApproveTimeoutMs": 45000,
        "imageGenerationProvider": undefined,
        "includeCurrentCost": false,
        "includeCurrentTime": true,
        "includeDiagnosticMessages": true,
        "includeTaskHistoryInEnhance": false,
        "language": "en",
        "maxDiagnosticMessages": 40,
        "maxGitStatusFiles": 9,
        "maxImageFileSize": 4,
        "maxOpenTabsContext": 15,
        "maxTotalImageSize": 18,
        "maxWorkspaceFiles": 150,
        "memoryRecallEnabled": true,
        "memoryWriterApiConfigId": "",
        "openRouterImageApiKey": undefined,
        "openRouterImageGenerationSelectedModel": undefined,
        "parallelTasksMaxConcurrency": 2,
        "profileThresholds": {},
        "pruneBeforeCondense": true,
        "pruneToolResultBudget": 4096,
        "reasoningBlockCollapsed": true,
        "searxngBaseUrl": "http://searx.local",
        "showRooIgnoredFiles": true,
        "soundEnabled": false,
        "soundVolume": 0.4,
        "subagentFollowupTimeoutSec": 30,
        "terminalCommandDelay": 0,
        "terminalOutputPreviewSize": "medium",
        "terminalPowershellCounter": undefined,
        "terminalProfile": "",
        "terminalShellIntegrationDisabled": true,
        "terminalShellIntegrationTimeout": 8000,
        "terminalZdotdir": undefined,
        "terminalZshClearEolMark": undefined,
        "terminalZshOhMy": false,
        "terminalZshP10k": undefined,
        "uiDensity": "comfortable",
        "webFetchMaxBytes": 51200,
        "webSearchBackend": "searxng",
        "webSearchMaxResults": 7,
        "webToolsEnabled": false,
        "writeDelayMs": 100,
      },
    },
    {
      "apiConfiguration": {
        "apiProvider": "anthropic",
      },
      "text": "default",
      "type": "upsertApiConfiguration",
    },
    {
      "bool": false,
      "type": "debugSetting",
    },
  ],
}
`;

exports[`SettingsView Save buffer through the real sections > experimental: an edit marks the form dirty and Save posts the pinned messages 1`] = `
{
  "immediate": [],
  "save": [
    {
      "type": "updateSettings",
      "updatedSettings": {
        "allowedCommands": [
          "git status",
        ],
        "allowedMaxCost": 3,
        "allowedMaxRequests": 25,
        "alwaysAllowExecute": true,
        "alwaysAllowFollowupQuestions": false,
        "alwaysAllowMcp": undefined,
        "alwaysAllowModeSwitch": undefined,
        "alwaysAllowReadOnly": true,
        "alwaysAllowReadOnlyOutsideWorkspace": undefined,
        "alwaysAllowSubtasks": undefined,
        "alwaysAllowWrite": false,
        "alwaysAllowWriteOutsideWorkspace": undefined,
        "alwaysAllowWriteProtected": undefined,
        "alwaysApprovePlan": undefined,
        "autoCondenseContext": true,
        "autoCondenseContextApiConfigId": undefined,
        "autoCondenseContextPercent": 80,
        "autoDreamEnabled": false,
        "autoDreamMinHours": 12,
        "autoDreamMinSessions": 3,
        "autoMemoryDirectory": "/mem",
        "autoMemoryEnabled": true,
        "autoMemoryShareWithClaudeCode": undefined,
        "checkpointTimeout": 20,
        "customSupportPrompts": {
          "ENHANCE": "Improve: \${userInput}",
        },
        "deniedCommands": [
          "rm -rf",
        ],
        "enableCheckpoints": true,
        "enableSubfolderRules": false,
        "enterBehavior": "send",
        "experiments": {
          "imageGeneration": false,
          "preventFocusDisruption": false,
          "runSlashCommand": true,
        },
        "followupAutoApproveTimeoutMs": 45000,
        "imageGenerationProvider": undefined,
        "includeCurrentCost": false,
        "includeCurrentTime": true,
        "includeDiagnosticMessages": true,
        "includeTaskHistoryInEnhance": false,
        "language": "en",
        "maxDiagnosticMessages": 40,
        "maxGitStatusFiles": 9,
        "maxImageFileSize": 4,
        "maxOpenTabsContext": 15,
        "maxTotalImageSize": 18,
        "maxWorkspaceFiles": 150,
        "memoryRecallEnabled": true,
        "memoryWriterApiConfigId": "",
        "openRouterImageApiKey": undefined,
        "openRouterImageGenerationSelectedModel": undefined,
        "parallelTasksMaxConcurrency": 2,
        "profileThresholds": {},
        "pruneBeforeCondense": true,
        "pruneToolResultBudget": 4096,
        "reasoningBlockCollapsed": true,
        "searxngBaseUrl": "http://searx.local",
        "showRooIgnoredFiles": false,
        "soundEnabled": false,
        "soundVolume": 0.4,
        "subagentFollowupTimeoutSec": 30,
        "terminalCommandDelay": 0,
        "terminalOutputPreviewSize": "medium",
        "terminalPowershellCounter": undefined,
        "terminalProfile": "",
        "terminalShellIntegrationDisabled": true,
        "terminalShellIntegrationTimeout": 8000,
        "terminalZdotdir": undefined,
        "terminalZshClearEolMark": undefined,
        "terminalZshOhMy": false,
        "terminalZshP10k": undefined,
        "uiDensity": "comfortable",
        "webFetchMaxBytes": 51200,
        "webSearchBackend": "searxng",
        "webSearchMaxResults": 7,
        "webToolsEnabled": false,
        "writeDelayMs": 900,
      },
    },
    {
      "apiConfiguration": {
        "apiProvider": "anthropic",
      },
      "text": "default",
      "type": "upsertApiConfiguration",
    },
    {
      "bool": false,
      "type": "debugSetting",
    },
  ],
}
`;

exports[`SettingsView Save buffer through the real sections > language: an edit marks the form dirty and Save posts the pinned messages 1`] = `
{
  "immediate": [],
  "save": [
    {
      "type": "updateSettings",
      "updatedSettings": {
        "allowedCommands": [
          "git status",
        ],
        "allowedMaxCost": 3,
        "allowedMaxRequests": 25,
        "alwaysAllowExecute": true,
        "alwaysAllowFollowupQuestions": false,
        "alwaysAllowMcp": undefined,
        "alwaysAllowModeSwitch": undefined,
        "alwaysAllowReadOnly": true,
        "alwaysAllowReadOnlyOutsideWorkspace": undefined,
        "alwaysAllowSubtasks": undefined,
        "alwaysAllowWrite": false,
        "alwaysAllowWriteOutsideWorkspace": undefined,
        "alwaysAllowWriteProtected": undefined,
        "alwaysApprovePlan": undefined,
        "autoCondenseContext": true,
        "autoCondenseContextApiConfigId": undefined,
        "autoCondenseContextPercent": 80,
        "autoDreamEnabled": false,
        "autoDreamMinHours": 12,
        "autoDreamMinSessions": 3,
        "autoMemoryDirectory": "/mem",
        "autoMemoryEnabled": true,
        "autoMemoryShareWithClaudeCode": undefined,
        "checkpointTimeout": 20,
        "customSupportPrompts": {
          "ENHANCE": "Improve: \${userInput}",
        },
        "deniedCommands": [
          "rm -rf",
        ],
        "enableCheckpoints": true,
        "enableSubfolderRules": false,
        "enterBehavior": "send",
        "experiments": {
          "imageGeneration": false,
          "preventFocusDisruption": false,
          "runSlashCommand": false,
        },
        "followupAutoApproveTimeoutMs": 45000,
        "imageGenerationProvider": undefined,
        "includeCurrentCost": false,
        "includeCurrentTime": true,
        "includeDiagnosticMessages": true,
        "includeTaskHistoryInEnhance": false,
        "language": "de",
        "maxDiagnosticMessages": 40,
        "maxGitStatusFiles": 9,
        "maxImageFileSize": 4,
        "maxOpenTabsContext": 15,
        "maxTotalImageSize": 18,
        "maxWorkspaceFiles": 150,
        "memoryRecallEnabled": true,
        "memoryWriterApiConfigId": "",
        "openRouterImageApiKey": undefined,
        "openRouterImageGenerationSelectedModel": undefined,
        "parallelTasksMaxConcurrency": 2,
        "profileThresholds": {},
        "pruneBeforeCondense": true,
        "pruneToolResultBudget": 4096,
        "reasoningBlockCollapsed": true,
        "searxngBaseUrl": "http://searx.local",
        "showRooIgnoredFiles": false,
        "soundEnabled": false,
        "soundVolume": 0.4,
        "subagentFollowupTimeoutSec": 30,
        "terminalCommandDelay": 0,
        "terminalOutputPreviewSize": "medium",
        "terminalPowershellCounter": undefined,
        "terminalProfile": "",
        "terminalShellIntegrationDisabled": true,
        "terminalShellIntegrationTimeout": 8000,
        "terminalZdotdir": undefined,
        "terminalZshClearEolMark": undefined,
        "terminalZshOhMy": false,
        "terminalZshP10k": undefined,
        "uiDensity": "comfortable",
        "webFetchMaxBytes": 51200,
        "webSearchBackend": "searxng",
        "webSearchMaxResults": 7,
        "webToolsEnabled": false,
        "writeDelayMs": 900,
      },
    },
    {
      "apiConfiguration": {
        "apiProvider": "anthropic",
      },
      "text": "default",
      "type": "upsertApiConfiguration",
    },
    {
      "bool": false,
      "type": "debugSetting",
    },
  ],
}
`;

exports[`SettingsView Save buffer through the real sections > memory: an edit marks the form dirty and Save posts the pinned messages 1`] = `
{
  "immediate": [],
  "save": [
    {
      "type": "updateSettings",
      "updatedSettings": {
        "allowedCommands": [
          "git status",
        ],
        "allowedMaxCost": 3,
        "allowedMaxRequests": 25,
        "alwaysAllowExecute": true,
        "alwaysAllowFollowupQuestions": false,
        "alwaysAllowMcp": undefined,
        "alwaysAllowModeSwitch": undefined,
        "alwaysAllowReadOnly": true,
        "alwaysAllowReadOnlyOutsideWorkspace": undefined,
        "alwaysAllowSubtasks": undefined,
        "alwaysAllowWrite": false,
        "alwaysAllowWriteOutsideWorkspace": undefined,
        "alwaysAllowWriteProtected": undefined,
        "alwaysApprovePlan": undefined,
        "autoCondenseContext": true,
        "autoCondenseContextApiConfigId": undefined,
        "autoCondenseContextPercent": 80,
        "autoDreamEnabled": false,
        "autoDreamMinHours": 12,
        "autoDreamMinSessions": 3,
        "autoMemoryDirectory": "/other",
        "autoMemoryEnabled": true,
        "autoMemoryShareWithClaudeCode": undefined,
        "checkpointTimeout": 20,
        "customSupportPrompts": {
          "ENHANCE": "Improve: \${userInput}",
        },
        "deniedCommands": [
          "rm -rf",
        ],
        "enableCheckpoints": true,
        "enableSubfolderRules": false,
        "enterBehavior": "send",
        "experiments": {
          "imageGeneration": false,
          "preventFocusDisruption": false,
          "runSlashCommand": false,
        },
        "followupAutoApproveTimeoutMs": 45000,
        "imageGenerationProvider": undefined,
        "includeCurrentCost": false,
        "includeCurrentTime": true,
        "includeDiagnosticMessages": true,
        "includeTaskHistoryInEnhance": false,
        "language": "en",
        "maxDiagnosticMessages": 40,
        "maxGitStatusFiles": 9,
        "maxImageFileSize": 4,
        "maxOpenTabsContext": 15,
        "maxTotalImageSize": 18,
        "maxWorkspaceFiles": 150,
        "memoryRecallEnabled": true,
        "memoryWriterApiConfigId": "",
        "openRouterImageApiKey": undefined,
        "openRouterImageGenerationSelectedModel": undefined,
        "parallelTasksMaxConcurrency": 2,
        "profileThresholds": {},
        "pruneBeforeCondense": true,
        "pruneToolResultBudget": 4096,
        "reasoningBlockCollapsed": true,
        "searxngBaseUrl": "http://searx.local",
        "showRooIgnoredFiles": false,
        "soundEnabled": false,
        "soundVolume": 0.4,
        "subagentFollowupTimeoutSec": 30,
        "terminalCommandDelay": 0,
        "terminalOutputPreviewSize": "medium",
        "terminalPowershellCounter": undefined,
        "terminalProfile": "",
        "terminalShellIntegrationDisabled": true,
        "terminalShellIntegrationTimeout": 8000,
        "terminalZdotdir": undefined,
        "terminalZshClearEolMark": undefined,
        "terminalZshOhMy": false,
        "terminalZshP10k": undefined,
        "uiDensity": "comfortable",
        "webFetchMaxBytes": 51200,
        "webSearchBackend": "searxng",
        "webSearchMaxResults": 7,
        "webToolsEnabled": false,
        "writeDelayMs": 900,
      },
    },
    {
      "apiConfiguration": {
        "apiProvider": "anthropic",
      },
      "text": "default",
      "type": "upsertApiConfiguration",
    },
    {
      "bool": false,
      "type": "debugSetting",
    },
  ],
}
`;

exports[`SettingsView Save buffer through the real sections > notifications: an edit marks the form dirty and Save posts the pinned messages 1`] = `
{
  "immediate": [],
  "save": [
    {
      "type": "updateSettings",
      "updatedSettings": {
        "allowedCommands": [
          "git status",
        ],
        "allowedMaxCost": 3,
        "allowedMaxRequests": 25,
        "alwaysAllowExecute": true,
        "alwaysAllowFollowupQuestions": false,
        "alwaysAllowMcp": undefined,
        "alwaysAllowModeSwitch": undefined,
        "alwaysAllowReadOnly": true,
        "alwaysAllowReadOnlyOutsideWorkspace": undefined,
        "alwaysAllowSubtasks": undefined,
        "alwaysAllowWrite": false,
        "alwaysAllowWriteOutsideWorkspace": undefined,
        "alwaysAllowWriteProtected": undefined,
        "alwaysApprovePlan": undefined,
        "autoCondenseContext": true,
        "autoCondenseContextApiConfigId": undefined,
        "autoCondenseContextPercent": 80,
        "autoDreamEnabled": false,
        "autoDreamMinHours": 12,
        "autoDreamMinSessions": 3,
        "autoMemoryDirectory": "/mem",
        "autoMemoryEnabled": true,
        "autoMemoryShareWithClaudeCode": undefined,
        "checkpointTimeout": 20,
        "customSupportPrompts": {
          "ENHANCE": "Improve: \${userInput}",
        },
        "deniedCommands": [
          "rm -rf",
        ],
        "enableCheckpoints": true,
        "enableSubfolderRules": false,
        "enterBehavior": "send",
        "experiments": {
          "imageGeneration": false,
          "preventFocusDisruption": false,
          "runSlashCommand": false,
        },
        "followupAutoApproveTimeoutMs": 45000,
        "imageGenerationProvider": undefined,
        "includeCurrentCost": false,
        "includeCurrentTime": true,
        "includeDiagnosticMessages": true,
        "includeTaskHistoryInEnhance": false,
        "language": "en",
        "maxDiagnosticMessages": 40,
        "maxGitStatusFiles": 9,
        "maxImageFileSize": 4,
        "maxOpenTabsContext": 15,
        "maxTotalImageSize": 18,
        "maxWorkspaceFiles": 150,
        "memoryRecallEnabled": true,
        "memoryWriterApiConfigId": "",
        "openRouterImageApiKey": undefined,
        "openRouterImageGenerationSelectedModel": undefined,
        "parallelTasksMaxConcurrency": 2,
        "profileThresholds": {},
        "pruneBeforeCondense": true,
        "pruneToolResultBudget": 4096,
        "reasoningBlockCollapsed": true,
        "searxngBaseUrl": "http://searx.local",
        "showRooIgnoredFiles": false,
        "soundEnabled": true,
        "soundVolume": 0.4,
        "subagentFollowupTimeoutSec": 30,
        "terminalCommandDelay": 0,
        "terminalOutputPreviewSize": "medium",
        "terminalPowershellCounter": undefined,
        "terminalProfile": "",
        "terminalShellIntegrationDisabled": true,
        "terminalShellIntegrationTimeout": 8000,
        "terminalZdotdir": undefined,
        "terminalZshClearEolMark": undefined,
        "terminalZshOhMy": false,
        "terminalZshP10k": undefined,
        "uiDensity": "comfortable",
        "webFetchMaxBytes": 51200,
        "webSearchBackend": "searxng",
        "webSearchMaxResults": 7,
        "webToolsEnabled": false,
        "writeDelayMs": 900,
      },
    },
    {
      "apiConfiguration": {
        "apiProvider": "anthropic",
      },
      "text": "default",
      "type": "upsertApiConfiguration",
    },
    {
      "bool": false,
      "type": "debugSetting",
    },
  ],
}
`;

exports[`SettingsView Save buffer through the real sections > prompts: an edit marks the form dirty and Save posts the pinned messages 1`] = `
{
  "immediate": [
    {
      "type": "updateSettings",
      "updatedSettings": {
        "includeTaskHistoryInEnhance": true,
      },
    },
  ],
  "save": [
    {
      "type": "updateSettings",
      "updatedSettings": {
        "allowedCommands": [
          "git status",
        ],
        "allowedMaxCost": 3,
        "allowedMaxRequests": 25,
        "alwaysAllowExecute": true,
        "alwaysAllowFollowupQuestions": false,
        "alwaysAllowMcp": undefined,
        "alwaysAllowModeSwitch": undefined,
        "alwaysAllowReadOnly": true,
        "alwaysAllowReadOnlyOutsideWorkspace": undefined,
        "alwaysAllowSubtasks": undefined,
        "alwaysAllowWrite": false,
        "alwaysAllowWriteOutsideWorkspace": undefined,
        "alwaysAllowWriteProtected": undefined,
        "alwaysApprovePlan": undefined,
        "autoCondenseContext": true,
        "autoCondenseContextApiConfigId": undefined,
        "autoCondenseContextPercent": 80,
        "autoDreamEnabled": false,
        "autoDreamMinHours": 12,
        "autoDreamMinSessions": 3,
        "autoMemoryDirectory": "/mem",
        "autoMemoryEnabled": true,
        "autoMemoryShareWithClaudeCode": undefined,
        "checkpointTimeout": 20,
        "customSupportPrompts": {
          "ENHANCE": "Improve: \${userInput}",
        },
        "deniedCommands": [
          "rm -rf",
        ],
        "enableCheckpoints": true,
        "enableSubfolderRules": false,
        "enterBehavior": "send",
        "experiments": {
          "imageGeneration": false,
          "preventFocusDisruption": false,
          "runSlashCommand": false,
        },
        "followupAutoApproveTimeoutMs": 45000,
        "imageGenerationProvider": undefined,
        "includeCurrentCost": false,
        "includeCurrentTime": true,
        "includeDiagnosticMessages": true,
        "includeTaskHistoryInEnhance": true,
        "language": "en",
        "maxDiagnosticMessages": 40,
        "maxGitStatusFiles": 9,
        "maxImageFileSize": 4,
        "maxOpenTabsContext": 15,
        "maxTotalImageSize": 18,
        "maxWorkspaceFiles": 150,
        "memoryRecallEnabled": true,
        "memoryWriterApiConfigId": "",
        "openRouterImageApiKey": undefined,
        "openRouterImageGenerationSelectedModel": undefined,
        "parallelTasksMaxConcurrency": 2,
        "profileThresholds": {},
        "pruneBeforeCondense": true,
        "pruneToolResultBudget": 4096,
        "reasoningBlockCollapsed": true,
        "searxngBaseUrl": "http://searx.local",
        "showRooIgnoredFiles": false,
        "soundEnabled": false,
        "soundVolume": 0.4,
        "subagentFollowupTimeoutSec": 30,
        "terminalCommandDelay": 0,
        "terminalOutputPreviewSize": "medium",
        "terminalPowershellCounter": undefined,
        "terminalProfile": "",
        "terminalShellIntegrationDisabled": true,
        "terminalShellIntegrationTimeout": 8000,
        "terminalZdotdir": undefined,
        "terminalZshClearEolMark": undefined,
        "terminalZshOhMy": false,
        "terminalZshP10k": undefined,
        "uiDensity": "comfortable",
        "webFetchMaxBytes": 51200,
        "webSearchBackend": "searxng",
        "webSearchMaxResults": 7,
        "webToolsEnabled": false,
        "writeDelayMs": 900,
      },
    },
    {
      "apiConfiguration": {
        "apiProvider": "anthropic",
      },
      "text": "default",
      "type": "upsertApiConfiguration",
    },
    {
      "bool": false,
      "type": "debugSetting",
    },
  ],
}
`;

exports[`SettingsView Save buffer through the real sections > subagents: an edit marks the form dirty and Save posts the pinned messages 1`] = `
{
  "immediate": [],
  "save": [
    {
      "type": "updateSettings",
      "updatedSettings": {
        "allowedCommands": [
          "git status",
        ],
        "allowedMaxCost": 3,
        "allowedMaxRequests": 25,
        "alwaysAllowExecute": true,
        "alwaysAllowFollowupQuestions": false,
        "alwaysAllowMcp": undefined,
        "alwaysAllowModeSwitch": undefined,
        "alwaysAllowReadOnly": true,
        "alwaysAllowReadOnlyOutsideWorkspace": undefined,
        "alwaysAllowSubtasks": undefined,
        "alwaysAllowWrite": false,
        "alwaysAllowWriteOutsideWorkspace": undefined,
        "alwaysAllowWriteProtected": undefined,
        "alwaysApprovePlan": undefined,
        "autoCondenseContext": true,
        "autoCondenseContextApiConfigId": undefined,
        "autoCondenseContextPercent": 80,
        "autoDreamEnabled": false,
        "autoDreamMinHours": 12,
        "autoDreamMinSessions": 3,
        "autoMemoryDirectory": "/mem",
        "autoMemoryEnabled": true,
        "autoMemoryShareWithClaudeCode": undefined,
        "checkpointTimeout": 20,
        "customSupportPrompts": {
          "ENHANCE": "Improve: \${userInput}",
        },
        "deniedCommands": [
          "rm -rf",
        ],
        "enableCheckpoints": true,
        "enableSubfolderRules": false,
        "enterBehavior": "send",
        "experiments": {
          "imageGeneration": false,
          "preventFocusDisruption": false,
          "runSlashCommand": false,
        },
        "followupAutoApproveTimeoutMs": 45000,
        "imageGenerationProvider": undefined,
        "includeCurrentCost": false,
        "includeCurrentTime": true,
        "includeDiagnosticMessages": true,
        "includeTaskHistoryInEnhance": false,
        "language": "en",
        "maxDiagnosticMessages": 40,
        "maxGitStatusFiles": 9,
        "maxImageFileSize": 4,
        "maxOpenTabsContext": 15,
        "maxTotalImageSize": 18,
        "maxWorkspaceFiles": 150,
        "memoryRecallEnabled": true,
        "memoryWriterApiConfigId": "",
        "openRouterImageApiKey": undefined,
        "openRouterImageGenerationSelectedModel": undefined,
        "parallelTasksMaxConcurrency": 4,
        "profileThresholds": {},
        "pruneBeforeCondense": true,
        "pruneToolResultBudget": 4096,
        "reasoningBlockCollapsed": true,
        "searxngBaseUrl": "http://searx.local",
        "showRooIgnoredFiles": false,
        "soundEnabled": false,
        "soundVolume": 0.4,
        "subagentFollowupTimeoutSec": 30,
        "terminalCommandDelay": 0,
        "terminalOutputPreviewSize": "medium",
        "terminalPowershellCounter": undefined,
        "terminalProfile": "",
        "terminalShellIntegrationDisabled": true,
        "terminalShellIntegrationTimeout": 8000,
        "terminalZdotdir": undefined,
        "terminalZshClearEolMark": undefined,
        "terminalZshOhMy": false,
        "terminalZshP10k": undefined,
        "uiDensity": "comfortable",
        "webFetchMaxBytes": 51200,
        "webSearchBackend": "searxng",
        "webSearchMaxResults": 7,
        "webToolsEnabled": false,
        "writeDelayMs": 900,
      },
    },
    {
      "apiConfiguration": {
        "apiProvider": "anthropic",
      },
      "text": "default",
      "type": "upsertApiConfiguration",
    },
    {
      "bool": false,
      "type": "debugSetting",
    },
  ],
}
`;

exports[`SettingsView Save buffer through the real sections > terminal: an edit marks the form dirty and Save posts the pinned messages 1`] = `
{
  "immediate": [],
  "save": [
    {
      "type": "updateSettings",
      "updatedSettings": {
        "allowedCommands": [
          "git status",
        ],
        "allowedMaxCost": 3,
        "allowedMaxRequests": 25,
        "alwaysAllowExecute": true,
        "alwaysAllowFollowupQuestions": false,
        "alwaysAllowMcp": undefined,
        "alwaysAllowModeSwitch": undefined,
        "alwaysAllowReadOnly": true,
        "alwaysAllowReadOnlyOutsideWorkspace": undefined,
        "alwaysAllowSubtasks": undefined,
        "alwaysAllowWrite": false,
        "alwaysAllowWriteOutsideWorkspace": undefined,
        "alwaysAllowWriteProtected": undefined,
        "alwaysApprovePlan": undefined,
        "autoCondenseContext": true,
        "autoCondenseContextApiConfigId": undefined,
        "autoCondenseContextPercent": 80,
        "autoDreamEnabled": false,
        "autoDreamMinHours": 12,
        "autoDreamMinSessions": 3,
        "autoMemoryDirectory": "/mem",
        "autoMemoryEnabled": true,
        "autoMemoryShareWithClaudeCode": undefined,
        "checkpointTimeout": 20,
        "customSupportPrompts": {
          "ENHANCE": "Improve: \${userInput}",
        },
        "deniedCommands": [
          "rm -rf",
        ],
        "enableCheckpoints": true,
        "enableSubfolderRules": false,
        "enterBehavior": "send",
        "experiments": {
          "imageGeneration": false,
          "preventFocusDisruption": false,
          "runSlashCommand": false,
        },
        "followupAutoApproveTimeoutMs": 45000,
        "imageGenerationProvider": undefined,
        "includeCurrentCost": false,
        "includeCurrentTime": true,
        "includeDiagnosticMessages": true,
        "includeTaskHistoryInEnhance": false,
        "language": "en",
        "maxDiagnosticMessages": 40,
        "maxGitStatusFiles": 9,
        "maxImageFileSize": 4,
        "maxOpenTabsContext": 15,
        "maxTotalImageSize": 18,
        "maxWorkspaceFiles": 150,
        "memoryRecallEnabled": true,
        "memoryWriterApiConfigId": "",
        "openRouterImageApiKey": undefined,
        "openRouterImageGenerationSelectedModel": undefined,
        "parallelTasksMaxConcurrency": 2,
        "profileThresholds": {},
        "pruneBeforeCondense": true,
        "pruneToolResultBudget": 4096,
        "reasoningBlockCollapsed": true,
        "searxngBaseUrl": "http://searx.local",
        "showRooIgnoredFiles": false,
        "soundEnabled": false,
        "soundVolume": 0.4,
        "subagentFollowupTimeoutSec": 30,
        "terminalCommandDelay": 0,
        "terminalOutputPreviewSize": "medium",
        "terminalPowershellCounter": undefined,
        "terminalProfile": "",
        "terminalShellIntegrationDisabled": false,
        "terminalShellIntegrationTimeout": 8000,
        "terminalZdotdir": undefined,
        "terminalZshClearEolMark": undefined,
        "terminalZshOhMy": false,
        "terminalZshP10k": undefined,
        "uiDensity": "comfortable",
        "webFetchMaxBytes": 51200,
        "webSearchBackend": "searxng",
        "webSearchMaxResults": 7,
        "webToolsEnabled": false,
        "writeDelayMs": 900,
      },
    },
    {
      "apiConfiguration": {
        "apiProvider": "anthropic",
      },
      "text": "default",
      "type": "upsertApiConfiguration",
    },
    {
      "bool": false,
      "type": "debugSetting",
    },
  ],
}
`;

exports[`SettingsView Save buffer through the real sections > ui: an edit marks the form dirty and Save posts the pinned messages 1`] = `
{
  "immediate": [],
  "save": [
    {
      "type": "updateSettings",
      "updatedSettings": {
        "allowedCommands": [
          "git status",
        ],
        "allowedMaxCost": 3,
        "allowedMaxRequests": 25,
        "alwaysAllowExecute": true,
        "alwaysAllowFollowupQuestions": false,
        "alwaysAllowMcp": undefined,
        "alwaysAllowModeSwitch": undefined,
        "alwaysAllowReadOnly": true,
        "alwaysAllowReadOnlyOutsideWorkspace": undefined,
        "alwaysAllowSubtasks": undefined,
        "alwaysAllowWrite": false,
        "alwaysAllowWriteOutsideWorkspace": undefined,
        "alwaysAllowWriteProtected": undefined,
        "alwaysApprovePlan": undefined,
        "autoCondenseContext": true,
        "autoCondenseContextApiConfigId": undefined,
        "autoCondenseContextPercent": 80,
        "autoDreamEnabled": false,
        "autoDreamMinHours": 12,
        "autoDreamMinSessions": 3,
        "autoMemoryDirectory": "/mem",
        "autoMemoryEnabled": true,
        "autoMemoryShareWithClaudeCode": undefined,
        "checkpointTimeout": 20,
        "customSupportPrompts": {
          "ENHANCE": "Improve: \${userInput}",
        },
        "deniedCommands": [
          "rm -rf",
        ],
        "enableCheckpoints": true,
        "enableSubfolderRules": false,
        "enterBehavior": "newline",
        "experiments": {
          "imageGeneration": false,
          "preventFocusDisruption": false,
          "runSlashCommand": false,
        },
        "followupAutoApproveTimeoutMs": 45000,
        "imageGenerationProvider": undefined,
        "includeCurrentCost": false,
        "includeCurrentTime": true,
        "includeDiagnosticMessages": true,
        "includeTaskHistoryInEnhance": false,
        "language": "en",
        "maxDiagnosticMessages": 40,
        "maxGitStatusFiles": 9,
        "maxImageFileSize": 4,
        "maxOpenTabsContext": 15,
        "maxTotalImageSize": 18,
        "maxWorkspaceFiles": 150,
        "memoryRecallEnabled": true,
        "memoryWriterApiConfigId": "",
        "openRouterImageApiKey": undefined,
        "openRouterImageGenerationSelectedModel": undefined,
        "parallelTasksMaxConcurrency": 2,
        "profileThresholds": {},
        "pruneBeforeCondense": true,
        "pruneToolResultBudget": 4096,
        "reasoningBlockCollapsed": true,
        "searxngBaseUrl": "http://searx.local",
        "showRooIgnoredFiles": false,
        "soundEnabled": false,
        "soundVolume": 0.4,
        "subagentFollowupTimeoutSec": 30,
        "terminalCommandDelay": 0,
        "terminalOutputPreviewSize": "medium",
        "terminalPowershellCounter": undefined,
        "terminalProfile": "",
        "terminalShellIntegrationDisabled": true,
        "terminalShellIntegrationTimeout": 8000,
        "terminalZdotdir": undefined,
        "terminalZshClearEolMark": undefined,
        "terminalZshOhMy": false,
        "terminalZshP10k": undefined,
        "uiDensity": "comfortable",
        "webFetchMaxBytes": 51200,
        "webSearchBackend": "searxng",
        "webSearchMaxResults": 7,
        "webToolsEnabled": false,
        "writeDelayMs": 900,
      },
    },
    {
      "apiConfiguration": {
        "apiProvider": "anthropic",
      },
      "text": "default",
      "type": "upsertApiConfiguration",
    },
    {
      "bool": false,
      "type": "debugSetting",
    },
  ],
}
`;

exports[`SettingsView Save buffer through the real sections > web: an edit marks the form dirty and Save posts the pinned messages 1`] = `
{
  "immediate": [],
  "save": [
    {
      "type": "updateSettings",
      "updatedSettings": {
        "allowedCommands": [
          "git status",
        ],
        "allowedMaxCost": 3,
        "allowedMaxRequests": 25,
        "alwaysAllowExecute": true,
        "alwaysAllowFollowupQuestions": false,
        "alwaysAllowMcp": undefined,
        "alwaysAllowModeSwitch": undefined,
        "alwaysAllowReadOnly": true,
        "alwaysAllowReadOnlyOutsideWorkspace": undefined,
        "alwaysAllowSubtasks": undefined,
        "alwaysAllowWrite": false,
        "alwaysAllowWriteOutsideWorkspace": undefined,
        "alwaysAllowWriteProtected": undefined,
        "alwaysApprovePlan": undefined,
        "autoCondenseContext": true,
        "autoCondenseContextApiConfigId": undefined,
        "autoCondenseContextPercent": 80,
        "autoDreamEnabled": false,
        "autoDreamMinHours": 12,
        "autoDreamMinSessions": 3,
        "autoMemoryDirectory": "/mem",
        "autoMemoryEnabled": true,
        "autoMemoryShareWithClaudeCode": undefined,
        "checkpointTimeout": 20,
        "customSupportPrompts": {
          "ENHANCE": "Improve: \${userInput}",
        },
        "deniedCommands": [
          "rm -rf",
        ],
        "enableCheckpoints": true,
        "enableSubfolderRules": false,
        "enterBehavior": "send",
        "experiments": {
          "imageGeneration": false,
          "preventFocusDisruption": false,
          "runSlashCommand": false,
        },
        "followupAutoApproveTimeoutMs": 45000,
        "imageGenerationProvider": undefined,
        "includeCurrentCost": false,
        "includeCurrentTime": true,
        "includeDiagnosticMessages": true,
        "includeTaskHistoryInEnhance": false,
        "language": "en",
        "maxDiagnosticMessages": 40,
        "maxGitStatusFiles": 9,
        "maxImageFileSize": 4,
        "maxOpenTabsContext": 15,
        "maxTotalImageSize": 18,
        "maxWorkspaceFiles": 150,
        "memoryRecallEnabled": true,
        "memoryWriterApiConfigId": "",
        "openRouterImageApiKey": undefined,
        "openRouterImageGenerationSelectedModel": undefined,
        "parallelTasksMaxConcurrency": 2,
        "profileThresholds": {},
        "pruneBeforeCondense": true,
        "pruneToolResultBudget": 4096,
        "reasoningBlockCollapsed": true,
        "searxngBaseUrl": "http://searx.local",
        "showRooIgnoredFiles": false,
        "soundEnabled": false,
        "soundVolume": 0.4,
        "subagentFollowupTimeoutSec": 30,
        "terminalCommandDelay": 0,
        "terminalOutputPreviewSize": "medium",
        "terminalPowershellCounter": undefined,
        "terminalProfile": "",
        "terminalShellIntegrationDisabled": true,
        "terminalShellIntegrationTimeout": 8000,
        "terminalZdotdir": undefined,
        "terminalZshClearEolMark": undefined,
        "terminalZshOhMy": false,
        "terminalZshP10k": undefined,
        "uiDensity": "comfortable",
        "webFetchMaxBytes": 51200,
        "webSearchBackend": "searxng",
        "webSearchMaxResults": 7,
        "webToolsEnabled": true,
        "writeDelayMs": 900,
      },
    },
    {
      "apiConfiguration": {
        "apiProvider": "anthropic",
      },
      "text": "default",
      "type": "upsertApiConfiguration",
    },
    {
      "bool": false,
      "type": "debugSetting",
    },
  ],
}
`;
